# mochi

./: .gitignore  .goreleaser.yaml  BENCHMARK.md  CHANGELOG.md  Dockerfile  LANGUAGE.md  LANGUAGES.md  Makefile  README.md  ROADMAP.md  SPEC.md  cheatsheet.mochi  download_task.go  go.mod  go.sum  go4.s  index.js  install.js  mix_go_python.mochi  package-lock.json  package.json  q1.c  rosetta_mochi_index.txt  tpch_q1_clj_tasks.md
ast/: README.md  ast.go  convert.go  pretty.go  printer.go
bench/: c.go  csharp.go  deps.go  kotlin.go  maxrss_darwin.go  maxrss_other.go  maxrss_unix.go  runner.go  rust.go  swift.go
cloud/: terraform_test.go
compile/: Readme.md
compiler/: compiler.go
compiler2/: doc.go
compiler3/: doc.go
diagnostic/: diagnostic.go
docs/: common-language-errors.md  index.md
examples/: datalog.mochi  kotlin_hello.ast.json  kotlin_hello.kt  kotlin_hello.mochi  load_with.mochi
golden/: golden.go  golden_test.go
interpreter/: builtins.go  consteval.go  errors.go  fold.go  helpers.go  instruction_table.go  interpreter.go  interpreter_test.go  mochi_interpreter_test.go  op_table.go  ops.go  plan_duckdb_test.go  run_result_test.go  runtime_utils.go  schema.go  schema_test.go  value.go
ir/: lower.go  lower_test.go
llm/: examples.latest.md  examples.v0.1.10.md  examples.v0.1.11.md  examples.v0.1.12.md  (+19 more)
tools/notebook/: README.md  __init__.py  mochi_magic.py  notebook_test.go  pyproject.toml
tools/spoj-py/: pyproject.toml
tools/spoj-py/src/spoj/: __main__.py  browser.py  chrome_http.py  cli.py  db.py  export.py  fetch_body.py  fetch_index.py
(+134629 files in other folders)
