[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mochi_magic"
version = "0.1.0"
description = "Jupyter cell magic for the Mochi language"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["ipython"]

[project.entry-points."IPython.extension"]
mochi_magic = "mochi_magic"

